--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,10 +15,10 @@
             <img src="/images/logo.png" class="logo">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="#">All Crypto</a></li>
+                <li><a href="/cryptos">All Crypto</a></li>
                 <li><a href="#">Search</a></li>
                 {{#if isAuthenticated}}
-                <li><a href="#">Create Offer</a></li>
+                <li><a href="/cryptos/create">Create Offer</a></li>
                 <li><a href="/logout">Logout</a></li>
                 {{else}}
                 <li><a href="/login">Login</a></li>
