Added Details page

--- a/views/partials/crypto.hbs
+++ b/views/partials/crypto.hbs
@@ -8,5 +8,5 @@
                         <p><span>Payment: </span>{{payment}}</p>
                     </div>
 
-                    <a href="#" class="btn-details">Details</a>
+                    <a href="/cryptos/{{_id}}/details" class="btn-details">Details</a>
                 </div>
