--- a/views/crypto/details.hbs
+++ b/views/crypto/details.hbs
@@ -14,17 +14,23 @@
                     <p id="description">{{crypto.decription}}</p>
                 </div>
                 <div class="product-btn">
-                    <!--Only for registered user and author of the publication -->
-                    <!-- <div class="author">
+                   {{#if isLogged}}
+                   {{#if isOwner}}
+                    <div class="author">
                         <a href="#" class="btn-edit">Edit</a>
                         <a href="#" class="btn-delete">Delete</a>
-                    </div> -->
-
+                    </div> 
+                    {{else}}
                     <!-- Logged in user who has not yet buy this crypto-->
-                    <!-- <a href="#" class="btn-buy">Buy</a> -->
+                     <a href="#" class="btn-buy">Buy</a> 
                     
                     <!-- Logged in user who has already buy this crypto-->
                     <p class="buy-message">You already bought these crypto coins.</p>
+                    {{/if}}
+                   {{/if}}
+
+
+
                 </div>
             </div>
         </section>
