--- a/views/crypto/details.hbs
+++ b/views/crypto/details.hbs
@@ -21,16 +21,13 @@
                         <a href="#" class="btn-delete">Delete</a>
                     </div> 
                     {{else}}
-                    <!-- Logged in user who has not yet buy this crypto-->
-                     <a href="#" class="btn-buy">Buy</a> 
-                    
-                    <!-- Logged in user who has already buy this crypto-->
+                    {{#if isBought}}
                     <p class="buy-message">You already bought these crypto coins.</p>
+                    {{else}}
+                     <a href="/cryptos/{{crypto._id}}/details" onClick={{buyCrypto}} class="btn-buy">Buy</a> 
+                    {{/if}}
                     {{/if}}
                    {{/if}}
-
-
-
                 </div>
             </div>
         </section>
