--- a/views/crypto/details.hbs
+++ b/views/crypto/details.hbs
@@ -17,7 +17,7 @@
                    {{#if isLogged}}
                    {{#if isOwner}}
                     <div class="author">
-                        <a href="#" class="btn-edit">Edit</a>
+                        <a href="/cryptos/{{crypto._id}}/details/edit" class="btn-edit">Edit</a>
                         <a href="#" class="btn-delete">Delete</a>
                     </div> 
                     {{else}}
