--- a/views/crypto/details.hbs
+++ b/views/crypto/details.hbs
@@ -18,7 +18,7 @@
                    {{#if isOwner}}
                     <div class="author">
                         <a href="/cryptos/{{crypto._id}}/details/edit" class="btn-edit">Edit</a>
-                        <a href="#" class="btn-delete">Delete</a>
+                        <a href="/cryptos/{{crypto._id}}/details/delete" class="btn-delete">Delete</a>
                     </div> 
                     {{else}}
                     {{#if isBought}}
